--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="🎵 KakYo Lesson - Olah Hobimu Menjadi Prestasi!">
     <meta property="og:description" content="Gabung sekarang! Cek jadwal, materi, dan progres latihanmu dalam satu aplikasi modern. Kursus musik di Jember.">
     
-    <meta property="og:image" content="logo-fix.png"> 
+    <meta property="og:image" content="logo-fix.jpeg"> 
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
 
